k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gohacker
  labels:
    name: gohacker
    app: gohacker
