k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gohacker
  namespace: gohacker
  labels:
    app: gohacker
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: gohacker
